--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: Inconsolata 12px
+font pango:Inconsolata Bold 12px
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -177,10 +177,10 @@ bar {
 	       
 	       # urgent workspace f37120
 	       # focused_workspace  #4c7899 #285577 #ffffff
-	       focused_workspace  #333333 #6b0078 #ffffff
+	       focused_workspace  #333333 #3B5998 #ffffff
 	       active_workspace   #333333 #5f676a #ffffff
 	       inactive_workspace #333333 #222222 #888888
-	       urgent_workspace   #333333 #b000b2 #ffffff
+	       urgent_workspace   #333333 #758ab6 #ffffff
     	}
 	
 	position top
@@ -196,17 +196,17 @@ bar {
 # dark purple test #6b0078
 # light purple test #b000b2
 # class                 border  backgr. text    indicator child_border
-client.focused          #333333 #6b0078 #ffffff #ffffff   #6b0078
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #bbbbbb #292d2e   #222222
-client.urgent           #333333 #b000b2 #ffffff #900000   #b000b2
+client.focused          #333333 #758ab6 #ffffff #758ab6   #758ab6 
+client.focused_inactive #333333 #484e50 #ffffff #484e50   #484e50
+client.unfocused        #333333 #484e50 #bbbbbb #484e50   #484e50
+client.urgent           #333333 #758ab6 #ffffff #758ab6   #758ab6
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 # compton
 exec --no-startup-id compton -CGb --backend glx --vsync opengl --xrender-sync
 
 # background configuration
-exec_always feh --bg-scale /home/kupo/Pictures/comfywallpaper1.jpg
+exec_always feh --bg-scale /home/kupo/Pictures/comfywallpaper8.png
 
 #screen brightness control
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase brightness
@@ -217,19 +217,81 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # 
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # decrease sound volume
 
-# dropbox
-exec_always --no-startup-id dropbox start
-
 # keyboard layout
-exec_always setxkbmap -model acer_laptop -layout us,latam # us ansi and latam ansi layout
+exec_always setxkbmap -model acer_laptop -layout us,latam -option 'grp:alt_shift_toggle','ctrl:nocaps'
+# us ansi and latam ansi layout
 # group toggle
-exec_always setxkbmap -option 'grp:alt_shift_toggle' #alt shift for keyboard switching
+
 
 # i3lock bindings
 bindsym $mod+Shift+x exec i3lock -i ~/Pictures/comfywallpaper3.png
+
+# dropbox
+exec_always --no-startup-id dropbox start
 
 # redshift
 exec_always --no-startup-id redshift
 
 # emacs server
-exec --no-startup-id emacs --daemon
+exec_always --no-startup-id emacs --daemon
+
+# bluetooth off by default
+exec_always --no-startup-id rfkill block bluetooth
+
+# i3-gaps
+# Disable window titlebars entirely
+for_window [class="^.*"] border pixel 5
+
+# Set inner/outer gaps
+gaps inner 25
+gaps outer 3
+
+# Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
+# gaps inner|outer current|all set|plus|minus <px>
+# gaps inner all set 10
+# gaps outer all plus 5
+
+# Smart gaps (gaps used if only more than one container on the workspace)
+# smart_gaps on
+
+# Smart borders (draw borders around container only if it is not the only container on this workspace)
+# on|no_gaps (on=always activate and no_gaps=only activate if the gap size to the edge of the screen is 0)
+smart_borders on
+
+# Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
+set $mode_gaps Gaps: (o) outer, (i) inner
+set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+bindsym $mod+Shift+g mode "$mode_gaps"
+
+mode "$mode_gaps" {
+        bindsym o      mode "$mode_gaps_outer"
+        bindsym i      mode "$mode_gaps_inner"
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+mode "$mode_gaps_inner" {
+        bindsym plus  gaps inner current plus 5
+        bindsym minus gaps inner current minus 5
+        bindsym 0     gaps inner current set 0
+
+        bindsym Shift+plus  gaps inner all plus 5
+        bindsym Shift+minus gaps inner all minus 5
+        bindsym Shift+0     gaps inner all set 0
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_outer" {
+        bindsym plus  gaps outer current plus 5
+        bindsym minus gaps outer current minus 5
+        bindsym 0     gaps outer current set 0
+
+        bindsym Shift+plus  gaps outer all plus 5
+        bindsym Shift+minus gaps outer all minus 5
+        bindsym Shift+0     gaps outer all set 0
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
