--- a/i3blocks/config
+++ b/i3blocks/config
@@ -114,7 +114,7 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%Y年%m月%d日   %H:%M'
+command=date '+%Y %m %d   %H:%M'
 interval=30
 
 # Generic media player support
